src/objects/Medicion_Lechera__c.object
<CustomObject>
    <description>Producción lechera de la vaca por día.</description>
    <fields>
        <fullName>Fecha__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Litros__c</fullName>
        <label>Litros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vaca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vaca</label>
        <referenceTo>Vaca__c</referenceTo>
        <relationshipLabel>Mediciones Lecheras</relationshipLabel>
        <relationshipName>Mediciones_Lecheras</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medición Lechera</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ML-{0000}</displayFormat>
        <label>Medición Lechera Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mediciones Lecheras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>